  need to perform configuration tests. This is currently only implimented for dynamic linking
- Made the same system work under static linking. This (barring any bugs) should be the
  completion of conf3. :)
- Fixed a bug where chmode +q users could not kick chmode +a users. (#0000459) reported by
  jollino.
- Fixed serious bug in /who that caused the server to lock up (there's a ID
  for this, could someone find it). Beta13 SHOULD be a LOT nearer now
- Small typo in config validation found by ins4ne
- Changed the way return values work in conf3 to better report the number of errors that
  occurred.
- Cleaned up some module code, also removed /module load|unload (just use /rehash)
- Removed makeconf
- Fixed errors in doc/example.conf and makenet
- Fixed set::scan::bind-ip and set::scan::ban-time typos in unreal32docs.html
- Changed set::scan:ban-time to set::scan::bantime and added set::scan::timeout in 
  unreal32docs.html
- Fixed some logical module rehash issues
- Made config actually add listeners when rehashing (...) also you can now
  change listener flags using /rehash
- Changed .SICI to point to cacert.org instead (patch by evilbunny)
- Fixed an oper count bug with SVS2MODE reported by confused (#0000490)
- Removed m_kline.c and m_zline.c these are now implimented as part of m_tkl.c
- Implemented a patch by poisoner to log vhosts in connect/disconnect logging (#0000487)
- Made some changes to the thread API to fix some win32 crashes
- Changed resolver code to use IRCMutex macros.
- Documentation updates (some reported by poisoner) (#0000493)
- Fixed some problems with /kline when removing a K:line
- Updated docs some more
- Fixed a makefile.win32.ssl problem reported by WeeD
- Changed version to beta13, updated docs
- Check for connect() success/failure in scanners on all OSs.
- Documentation updates
- Added back the commands check that didn't get added in conf3 (lamers
  beware)
- Fixed a typo in the module system