@@ -1715,3 +1715,4 @@ seen. gmtime warning still there
 - Added back the commands check that didn't get added in conf3 (lamers
   beware)
 - Fixed a typo in the module system
+- Fixed exception in scanner on Windows
